# programmiersprachen-raytracer

files/: animation.txt  scene.txt
framework/: box.cpp  box.hpp  camera.cpp  camera.hpp  color.hpp  cone.cpp  cone.hpp  cylinder.cpp  cylinder.hpp  hitpoint.hpp  light.cpp  light.hpp  material.cpp  material.hpp  ray.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  sdfloader.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
source/: CMakeLists.txt  animation.cpp  raytracer.cpp  tests.cpp
